<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_reports"
            android:title="@string/my_reports" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/map_view" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/leaderboard" />
        <item
            android:id="@+id/nav_insights"
            android:icon="@drawable/ic_insights"
            android:title="@string/ai_insights" />
        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/ic_education"
            android:title="@string/waste_education" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_admin"
            android:title="@string/admin_panel" />
    </group>

    <group android:id="@+id/group3">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>

</menu>